--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <p>I'm hosted with GitHub Pages.</p>
     <center>
         <div style="display: flex; justify-content: space-evenly;flex-wrap: wrap;">
-            <canvas style="background-color:#eee;" id="canvas" height=500 width=500></canvas>
+            <canvas style="background-color:#eee; height: 500px; width: 500px;" id="canvas" width="500" height="500"></canvas>
             <div>
                 <pre>Wektor wejściowy (x,y,z,theta)</pre>
                 <textarea id="Vvalue" rows=1 cols="35" readonly></textarea><textarea id="Tvalue" rows=1 cols="2" readonly></textarea>
